# KDock

./: CMakeLists.txt
skins/: CMakeLists.txt
src/: AppMatcher.cpp  AppMatcher.h  CMakeLists.txt  DockApp.cpp  DockApp.h  DockApplication.cpp  DockApplication.h  DockConfig.cpp  DockConfig.h  DockConfig.kcfg  DockConfig.kcfgc  DockConfigDialog.cpp  DockConfigDialog.h  DockContainer.cpp  DockContainer.h  DockDragDropEvent.cpp  DockDragDropEvent.h  DockGraphicsScene.cpp  DockGraphicsScene.h  DockIcon.cpp  DockIcon.h  DockPanel.cpp  DockPanel.h  DockPanelView.cpp  DockPanelView.h  DockProxyView.cpp  DockProxyView.h  DockTaskIcon.cpp  DockTaskIcon.h  DockTaskManager.cpp  DockTaskManager.h  DockWindow.cpp  DockWindow.h  main.cpp
src/ui/: AppearanceConfig.ui  BehaviorConfig.ui
